Finish re-styling all pages. Added meta for sharing. Added 2 new projects to home page.

--- a/src/app/apps/todo-app/todo-app.component.html
+++ b/src/app/apps/todo-app/todo-app.component.html
@@ -31,7 +31,7 @@
         <!-- <div class="arrow">
             <i class="fas fa-location-arrow"></i>
         </div> -->
-        <div class="popup-container p-3 d-flex flex-column" *ngIf="user == null">
+        <div class="popup-container p-3 d-flex flex-column bg-dark" *ngIf="user == null">
             <!-- <i class="fas fa-times font-weight-bold align-self-end" (click)="togglePopup()"></i> -->
             <div>
                 <h3>You're not signed in!</h3>
