--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -1,5 +1,5 @@
 <section class="contact-form-container d-flex flex-column justify-content-center align-items-center">
-    <h2 class="p-3"><i class="far fa-paper-plane mr-2"></i>Contact Me</h2>
+    <h2 class="p-3 bg-dark mt-5"><i class="far fa-paper-plane mr-2"></i>Contact Me</h2>
     <div class="form-heading-container">
         <p class="container mt-3">
             Do you have a project you'd like to get started or would you like some
