--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,8 +19,12 @@
     <section class="bg-dark pt-5">
         <div class="pt-5"></div>
         <div class="pt-md-5"></div>
+        <div class="pt-md-5"></div>
+        <div class="pt-md-5"></div>
+        <div class="pt-md-5"></div>
+
         <div class="container">
-            <div class="row">
+            <div class="row justify-content-center align-items-center">
                 <div class="col">
                     <h1 class="text-light">Hi, I'm Brent Owen a Software Developer</h1>
                     <p class="text-light">
@@ -33,8 +37,10 @@
                 </div>
             </div>
         </div>
-        <div class="pb-5"></div>
-        <div class="pb-5"></div>
+        <div class="p-5"></div>
+        <div class="p-5"></div>
+        <div class="pt-md-5"></div>
+
     </section>
     <div class="clipped-container bg-dark"></div>
     <section class="about-container mb-5">
@@ -91,6 +97,8 @@
     </section>
 
     <div class="p-md-5"></div>
+    <div class="pt-md-5"></div>
+    <div class="pt-md-5"></div>
 
     <section class="container skills">
         <h3><i id="skill-heading" class="fas fa-chart-line mr-2"></i>Skills</h3>
@@ -109,113 +117,186 @@
     </section>
 
     <div class="p-5"></div>
+    <div class="pt-md-5"></div>
+    <div class="pt-md-5"></div>
 
     <section class="container projects pb-4">
         <h3><i id="skill-heading" class="fas fa-project-diagram mr-2"></i>Projects</h3>
-        <div class="row">
-                <div class="card">
-                    <div class="img-container">
-                        <img src="../../assets/ppi-1.png" alt="" class="card-img-top">
+        <div class="row justify-content-center">
+            <div class="card shadow-sm">
+                <div class="img-container">
+                    <img src="../../assets/profileSite-1.png" alt="" class="card-img-top">
+                </div>
+                <div class="card-body d-flex flex-column">
+                    <div class="flex-grow-1">
+                        <h5 class="card-title">Profile Site</h5>
+                        <p class="card-text">
+                            Personal profile site built with Angular on the front and .Net Core on the back. Firebase for the Auth.
+                        </p>
                     </div>
-                    <div class="card-body">
+                    <small>Angular, TypeScript, BootStrap, .Net Core API, Firebase</small>
+                </div>
+            </div>
+            <div class="card shadow-sm">
+                <div class="img-container">
+                    <img src="../../assets/ppi-1.png" alt="" class="card-img-top">
+                </div>
+                <div class="card-body d-flex flex-column">
+                    <div class="flex-grow-1">
                         <h5 class="card-title">PPI</h5>
                         <p class="card-text">
                             A web app developed to help coaches and associations evaluate players to create balanced teams.
                         </p>
                     </div>
+                    <small>JS, HTML, CSS, BootStrap</small>
                 </div>
-                <div class="card">
-                    <div class="img-container">
-                        <img src="../../assets/js-apps.png" alt="" class="card-img-top">
+            </div>
+            <div class="card shadow-sm">
+                <div class="img-container">
+                    <img src="../../assets/blog-1.png" alt="" class="card-img-top">
+                </div>
+                <div class="card-body d-flex flex-column">
+                    <div class="flex-grow-1">
+                        <h5 class="card-title">Blog</h5>
+                        <p class="card-text">
+                            Create, edit and delete blogs. Like and comment on other peoples blogs. Anyone can post new blog just sign in.
+                        </p>
                     </div>
-                    <div class="card-body">
+                    <small>Angular, TypeScript, BootStrap, Firestore</small>
+                </div>
+            </div>
+            <div class="card shadow-sm">
+                <div class="img-container">
+                    <img src="../../assets/covid-1.png" alt="" class="card-img-top">
+                </div>
+                <div class="card-body d-flex flex-column">
+                    <div class="flex-grow-1">
+                        <h5 class="card-title">COVID Dashboard</h5>
+                        <p class="card-text">
+                            Connecting to API to display world and local COVID data.
+                        </p>
+                    </div>
+                    <small>TypeScript, CSS, BootStrap, ChartJS</small>
+                </div>
+            </div>
+            <div class="card shadow-sm">
+                <div class="img-container">
+                    <img src="../../assets/js-apps.png" alt="" class="card-img-top">
+                </div>
+                <div class="card-body d-flex flex-column">
+                    <div class="flex-grow-1">
                         <h5 class="card-title">Web Apps</h5>
                         <p class="card-text">
                             Small web apps covering JavaScript concepts which displays the code and the result.
                         </p>
                     </div>
+                    <small>JS, HTML, CSS</small>
                 </div>
-                <div class="card">
-                    <div class="img-container">
-                        <img src="../../assets/deco-2.png" alt="" class="card-img-top">
-                    </div>
-                    <div class="card-body">
+            </div>
+            <div class="card shadow-sm">
+                <div class="img-container">
+                    <img src="../../assets/deco-2.png" alt="" class="card-img-top">
+                </div>
+                <div class="card-body d-flex flex-column">
+                    <div class="flex-grow-1">
                         <h5 class="card-title">Market Place</h5>
                         <p class="card-text">
                             Created landing page from PDF and assets. Responsive design using Flex-Box.
                         </p>
                     </div>
+                    <small>HTML, CSS</small>
                 </div>
-                <div class="card">
-                    <div class="img-container">
-                        <img src="../../assets/deco-1.png" alt="" class="card-img-top">
-                    </div>
-                    <div class="card-body">
+            </div>
+            <div class="card shadow-sm">
+                <div class="img-container">
+                    <img src="../../assets/deco-1.png" alt="" class="card-img-top">
+                </div>
+                <div class="card-body d-flex flex-column">
+                    <div class="flex-grow-1">
                         <h5 class="card-title">Landing Page</h5>
                         <p class="card-text">
                             Created landing page from PDF and assets. Responsive design using Flex-Box.
                         </p>
                     </div>
+                    <small>HTML, CSS</small>
                 </div>
-                <div class="card">
-                    <div class="img-container">
-                        <img src="../../assets/holden-1.png" alt="" class="card-img-top">
-                    </div>
-                    <div class="card-body">
+            </div>
+            <div class="card shadow-sm">
+                <div class="img-container">
+                    <img src="../../assets/holden-1.png" alt="" class="card-img-top">
+                </div>
+                <div class="card-body d-flex flex-column">
+                    <div class="flex-grow-1">
                         <h5 class="card-title">Custom Element</h5>
                         <p class="card-text">
                             Custom markup to be used on multiple Real Geeks sites. Card layout with hover effects.
                         </p>
                     </div>
+                    <small>JS, HTML, CSS</small>
                 </div>
-                <div class="card">
-                    <div class="img-container">
-                        <img src="../../assets/holden-2.png" alt="" class="card-img-top">
-                    </div>
-                    <div class="card-body">
+            </div>
+            <div class="card shadow-sm">
+                <div class="img-container">
+                    <img src="../../assets/holden-2.png" alt="" class="card-img-top">
+                </div>
+                <div class="card-body d-flex flex-column">
+                    <div class="flex-grow-1">
                         <h5 class="card-title">Custom Element</h5>
                         <p class="card-text">
                             Custom three item carousel to be used on multiple Real Geeks sites.
                         </p>
                     </div>
+                    <small>JS, HTML, CSS</small>
                 </div>
-                <div class="card">
-                    <div class="img-container">
-                        <img src="../../assets/how-it-works-1.png" alt="" class="card-img-top">
-                    </div>
-                    <div class="card-body">
+            </div>
+            <div class="card shadow-sm">
+                <div class="img-container">
+                    <img src="../../assets/how-it-works-1.png" alt="" class="card-img-top">
+                </div>
+                <div class="card-body d-flex flex-column">
+                    <div class="flex-grow-1">
                         <h5 class="card-title">Landing Page</h5>
                         <p class="card-text">
                             Created landing page from PDF and assets. Responsive design using Flex-Box.
                         </p>
                     </div>
+                    <small>HTML, CSS</small>
                 </div>
-                <div class="card">
-                    <div class="img-container">
-                        <img src="../../assets/porrada-1.png" alt="" class="card-img-top">
-                    </div>
-                    <div class="card-body">
+            </div>
+            <div class="card shadow-sm">
+                <div class="img-container">
+                    <img src="../../assets/porrada-1.png" alt="" class="card-img-top">
+                </div>
+                <div class="card-body d-flex flex-column">
+                    <div class="flex-grow-1">
                         <h5 class="card-title">Landing Page</h5>
                         <p class="card-text">
                             Create landing page from PDF and assets. Responsive design using Flex-Box.
                         </p>
                     </div>
+                    <small>HTML, CSS</small>
                 </div>
-                <div class="card">
-                    <div class="img-container">
-                        <img src="../../assets/nucamp-1.png" alt="" class="card-img-top">
-                    </div>
-                    <div class="card-body">
+            </div>
+            <div class="card shadow-sm">
+                <div class="img-container">
+                    <img src="../../assets/nucamp-1.png" alt="" class="card-img-top">
+                </div>
+                <div class="card-body d-flex flex-column">
+                    <div class="flex-grow-1">
                         <h5 class="card-title">Website</h5>
                         <p class="card-text">
                             Complete website using responsive design and accessability best practices.
                         </p>
                     </div>
+                    <small>JS, JQuery, HTML, CSS, BootStrap</small>
                 </div>
             </div>
+        </div>
     </section>
 
     <div class="p-5"></div>
+    <div class="pt-md-5"></div>
+    <div class="pt-md-5"></div>
     <!-- <section class="what-to-expect d-flex flex-column justify-content-center align-items-center mb-5">
         <div class="what-heading-container">
             <h3 class="mt-5"><i class="fas fa-chalkboard mr-2"></i>What To Expect</h3>
