--- a/src/app/apps/blog-app/blog-post/blog-post.component.html
+++ b/src/app/apps/blog-app/blog-post/blog-post.component.html
@@ -1,7 +1,7 @@
 <section>
-    <div *ngIf="!edit">
+    <div *ngIf="!edit" class="p-5">
         <!-- <h2 class="p-3"><i class="fas fa-blog mr-2"></i>{{ title }}</h2> -->
-        <h3 class="p-2 ml-3 back" routerLink="/blogs"><i class="fas fa-chevron-left mr-2"></i>Back</h3>
+        <h3 class="p-2 ml-3 back mt-5" routerLink="/blogs"><i class="fas fa-chevron-left mr-2"></i>Back</h3>
         <div class="body-container p-3" *ngIf="post">
             <i class="fas fa-edit m-2" *ngIf="userId == post.authorId" (click)="edit = true"></i>
             <img src="{{ post.image }}" class="mb-3">
@@ -41,7 +41,7 @@
             </div>
         </div>
     </div>
-    <div *ngIf="edit" class="body-container">
+    <div *ngIf="edit" class="body-container mt-5 p-5">
         <input class="form-control mb-2" type="text" placeholder="Title" [(ngModel)]="post.title">
         <textarea class="form-control" name="body" cols="30" rows="10" [(ngModel)]="post.body"></textarea>
         <button class="btn" (click)="editPost()">Save</button>
