--- a/src/app/apps/todo-app/todo/todo.component.html
+++ b/src/app/apps/todo-app/todo/todo.component.html
@@ -1,5 +1,5 @@
 <section class="todo-container">
-    <h2 class="p-3"><i class="fas fa-list-ul mr-2"></i>{{ group }} Group</h2>
+    <h2 class="p-3 bg-dark mt-5"><i class="fas fa-list-ul mr-2"></i>Group: {{ group }}</h2>
     <h3 class="p-2 back ml-2" routerLink="/todo"><i class="fas fa-chevron-left mr-2"></i>Groups</h3>
     <div class="form-container">
         <h3 class="ml-4 mt-3">Add To-Do</h3>
