--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -139,11 +139,31 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
+                    <img src="../../assets/api-1.png" alt="" class="card-img-top">
+                </div>
+                <div class="card-body d-flex flex-column">
+                    <div class="flex-grow-1">
+                        <div class="d-flex align-items-center">
+                            <h5 class="card-title">Profile Site Backend</h5>
+                            <a class="px-2" href="https://exerciselist.azurewebsites.net/swagger/index.html" target="__blank">Live</a>
+                        </div>
+                        <p class="card-text">
+                            Personal profile site backend. CRUD for all the small webs apps on the site.
+                        </p>
+                    </div>
+                    <small>.Net Core, C#, Swagger</small>
+                </div>
+            </div>
+            <div class="card shadow-sm">
+                <div class="img-container">
                     <img src="../../assets/ppi-1.png" alt="" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
-                        <h5 class="card-title">PPI</h5>
+                        <div class="d-flex align-items-center">
+                            <h5 class="card-title">PPI</h5>
+                            <!-- <a class="px-2" href="">Live</a> -->
+                        </div>
                         <p class="card-text">
                             A web app developed to help coaches and associations evaluate players to create balanced teams.
                         </p>
@@ -157,7 +177,10 @@
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
-                        <h5 class="card-title">Blog</h5>
+                        <div class="d-flex align-items-center">
+                            <h5 class="card-title">Blog</h5>
+                            <a class="px-2" href="http://localhost:4200/#/blogs">Live</a>
+                        </div>
                         <p class="card-text">
                             Create, edit and delete blogs. Like and comment on other peoples blogs. Anyone can post new blog just sign in.
                         </p>
@@ -171,7 +194,10 @@
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
-                        <h5 class="card-title">COVID Dashboard</h5>
+                        <div class="d-flex align-items-center">
+                            <h5 class="card-title">COVID Dashboard</h5>
+                            <a class="px-2" href="http://localhost:4200/#/covid">Live</a>
+                        </div>
                         <p class="card-text">
                             Connecting to API to display world and local COVID data.
                         </p>
@@ -185,7 +211,10 @@
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
-                        <h5 class="card-title">Web Apps</h5>
+                        <div class="d-flex align-items-center">
+                            <h5 class="card-title">Web Apps</h5>
+                            <a class="px-2" href="http://brentowen-net.s3-website-us-east-1.amazonaws.com/">Live</a>
+                        </div>
                         <p class="card-text">
                             Small web apps covering JavaScript concepts which displays the code and the result.
                         </p>
