Added links to code on github for projects

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -62,6 +62,7 @@
     margin-bottom: 12px;
     color: #CD5334;
     text-decoration: none;
+    transition: ease-in .3s;
 }
 
 .card-body a:hover {
