--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -129,7 +129,10 @@
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
-                        <h5 class="card-title">Profile Site</h5>
+                        <div class="row">
+                            <h5 class="card-title col-10">Profile Site</h5>
+                            <a class="px-2 col" href="https://github.com/bowen227/NewBrentOwenNet" target="__blank">Code</a>
+                        </div>
                         <p class="card-text">
                             Personal profile site built with Angular on the front and .Net Core on the back. Firebase for the Auth.
                         </p>
@@ -143,9 +146,10 @@
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
-                        <div class="d-flex align-items-center">
-                            <h5 class="card-title">Profile Site Backend</h5>
-                            <a class="px-2" href="https://exerciselist.azurewebsites.net/swagger/index.html" target="__blank">Live</a>
+                        <div class="row">
+                            <h5 class="card-title col-8">Profile Site Backend</h5>
+                            <a class="px-2 col" href="https://exerciselist.azurewebsites.net/swagger/index.html" target="__blank">Live</a>
+                            <a class="px-2 code" href="https://github.com/bowen227/profileBackEnd" target="__blank">Code</a>
                         </div>
                         <p class="card-text">
                             Personal profile site backend. CRUD for all the small webs apps on the site.
@@ -160,9 +164,9 @@
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
-                        <div class="d-flex align-items-center">
-                            <h5 class="card-title">PPI</h5>
-                            <!-- <a class="px-2" href="">Live</a> -->
+                        <div class="row">
+                            <h5 class="card-title col-10">PPI</h5>
+                            <a class="px-2 col" href="https://github.com/bowen227/ppi" target="__blank">Code</a>
                         </div>
                         <p class="card-text">
                             A web app developed to help coaches and associations evaluate players to create balanced teams.
@@ -177,9 +181,9 @@
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
-                        <div class="d-flex align-items-center">
-                            <h5 class="card-title">Blog</h5>
-                            <a class="px-2" href="http://localhost:4200/#/blogs">Live</a>
+                        <div class="row">
+                            <h5 class="card-title col-10">Blog</h5>
+                            <a class="px-2 col" href="http://localhost:4200/#/blogs">Live</a>
                         </div>
                         <p class="card-text">
                             Create, edit and delete blogs. Like and comment on other peoples blogs. Anyone can post new blog just sign in.
@@ -194,9 +198,9 @@
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
-                        <div class="d-flex align-items-center">
-                            <h5 class="card-title">COVID Dashboard</h5>
-                            <a class="px-2" href="http://localhost:4200/#/covid">Live</a>
+                        <div class="row">
+                            <h5 class="card-title col-10">COVID Dashboard</h5>
+                            <a class="px-2 col" href="http://localhost:4200/#/covid">Live</a>
                         </div>
                         <p class="card-text">
                             Connecting to API to display world and local COVID data.
@@ -211,9 +215,9 @@
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
-                        <div class="d-flex align-items-center">
-                            <h5 class="card-title">Web Apps</h5>
-                            <a class="px-2" href="http://brentowen-net.s3-website-us-east-1.amazonaws.com/">Live</a>
+                        <div class="row">
+                            <h5 class="card-title col-10">Web Apps</h5>
+                            <a class="px-2 col" href="http://brentowen-net.s3-website-us-east-1.amazonaws.com/">Live</a>
                         </div>
                         <p class="card-text">
                             Small web apps covering JavaScript concepts which displays the code and the result.
