Updated url's for projects

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -182,8 +182,9 @@
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
                         <div class="row">
-                            <h5 class="card-title col-10">Blog</h5>
+                            <h5 class="card-title col-8">Blog</h5>
                             <a class="px-2 col" href="http://localhost:4200/#/blogs">Live</a>
+                            <a class="px-2 col" href="https://github.com/bowen227/NewBrentOwenNet" target="__blank">Code</a>
                         </div>
                         <p class="card-text">
                             Create, edit and delete blogs. Like and comment on other peoples blogs. Anyone can post new blog just sign in.
@@ -199,8 +200,9 @@
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
                         <div class="row">
-                            <h5 class="card-title col-10">COVID Dashboard</h5>
+                            <h5 class="card-title col-8">COVID Dashboard</h5>
                             <a class="px-2 col" href="http://localhost:4200/#/covid">Live</a>
+                            <a class="px-2 col" href="https://github.com/bowen227/NewBrentOwenNet" target="__blank">Code</a>
                         </div>
                         <p class="card-text">
                             Connecting to API to display world and local COVID data.
