Resized all images for performance gain

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -98,21 +98,22 @@
 
     <div class="p-md-5"></div>
     <div class="pt-md-5"></div>
-    <div class="pt-md-5"></div>
 
-    <section class="container skills">
-        <h3><i id="skill-heading" class="fas fa-chart-line mr-2"></i>Skills</h3>
-        <div class="row p-3 justify-content-center">
-            <i class="skill fab fa-html5"></i>
-            <i class="skill fab fa-css3-alt"></i>
-            <i class="skill fab fa-sass"></i>
-            <i class="skill fab fa-bootstrap"></i>
-            <i class="skill fab fa-js"></i>
-            <i class="skill fab fa-angular"></i>
-            <i class="skill fab fa-react"></i>
-            <i class="skill fab fa-node-js"></i>
-            <i class="skill fab fa-git"></i>
-            <i class="skill fas fa-database"></i>
+    <section class="skills-container">
+        <div class="container skills pt-5">
+            <h3><i id="skill-heading" class="fas fa-chart-line mr-2"></i>Skills</h3>
+            <div class="row p-3 justify-content-center">
+                <i class="skill hidden fab fa-html5"></i>
+                <i class="skill hidden fab fa-css3-alt"></i>
+                <i class="skill hidden fab fa-sass"></i>
+                <i class="skill hidden fab fa-bootstrap"></i>
+                <i class="skill hidden fab fa-js"></i>
+                <i class="skill hidden fab fa-angular"></i>
+                <i class="skill hidden fab fa-react"></i>
+                <i class="skill hidden fab fa-node-js"></i>
+                <i class="skill hidden fab fa-git"></i>
+                <i class="skill hidden fas fa-database"></i>
+            </div>
         </div>
     </section>
 
@@ -142,7 +143,7 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/api-1.png" alt="" class="card-img-top">
+                    <img src="../../assets/api-1.jpg" alt="" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -160,7 +161,7 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/ppi-1.png" alt="" class="card-img-top">
+                    <img src="../../assets/ppi-1.jpg" alt="" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -177,13 +178,13 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/blog-1.png" alt="" class="card-img-top">
+                    <img src="../../assets/blog-1.jpg" alt="" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
                         <div class="row">
                             <h5 class="card-title col-8">Blog</h5>
-                            <a class="px-2 col" href="http://localhost:4200/#/blogs">Live</a>
+                            <a class="px-2 col" routerLink="/blogs">Live</a>
                             <a class="px-2 col" href="https://github.com/bowen227/NewBrentOwenNet" target="__blank">Code</a>
                         </div>
                         <p class="card-text">
@@ -195,13 +196,13 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/covid-1.png" alt="" class="card-img-top">
+                    <img src="../../assets/covid-1.jpg" alt="" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
                         <div class="row">
                             <h5 class="card-title col-8">COVID Dashboard</h5>
-                            <a class="px-2 col" href="http://localhost:4200/#/covid">Live</a>
+                            <a class="px-2 col" routerLink="/covid">Live</a>
                             <a class="px-2 col" href="https://github.com/bowen227/NewBrentOwenNet" target="__blank">Code</a>
                         </div>
                         <p class="card-text">
@@ -213,7 +214,7 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/js-apps.png" alt="" class="card-img-top">
+                    <img src="../../assets/js-apps.jpg" alt="" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -230,7 +231,7 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/deco-2.png" alt="" class="card-img-top">
+                    <img src="../../assets/deco-2.jpg" alt="" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -244,7 +245,7 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/deco-1.png" alt="" class="card-img-top">
+                    <img src="../../assets/deco-1.jpg" alt="" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -258,7 +259,7 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/holden-1.png" alt="" class="card-img-top">
+                    <img src="../../assets/holden-1.jpg" alt="" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -272,7 +273,7 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/holden-2.png" alt="" class="card-img-top">
+                    <img src="../../assets/holden-2.jpg" alt="" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -286,7 +287,7 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/how-it-works-1.png" alt="" class="card-img-top">
+                    <img src="../../assets/how-it-works-1.jpg" alt="" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -300,7 +301,7 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/porrada-1.png" alt="" class="card-img-top">
+                    <img src="../../assets/porrada-1.jpg" alt="" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -314,7 +315,7 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/nucamp-1.png" alt="" class="card-img-top">
+                    <img src="../../assets/nucamp-1.jpg" alt="" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
