--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -29,6 +29,9 @@
     color: #fff;
 }
 
+/* .skills-container {
+    background-color: #CD5334;
+} */
 
 #skill-heading {
     font-size: 2.3 !important;
@@ -37,6 +40,16 @@
 .skill {
     font-size: 5rem;
     padding: .6em;
+}
+
+.hidden {
+    opacity: 1;
+}
+
+.fade-in {
+    opacity: 1;
+    transition: ease-in 1s;
+
 }
 
 .card {
