Fixed layout issue. Added social links to hero section. Added types to todo service functions for better readability.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,9 +27,23 @@
             <div class="row justify-content-center align-items-center">
                 <div class="col">
                     <h1 class="text-light">Hi, I'm Brent Owen a Software Developer</h1>
-                    <p class="text-light">
+                    <p class="text-light mb-0">
                         I'm a freelance developer located in Chattanooga, TN.
                     </p>
+                    <div class="row social-links mb-3">
+                        <a href="https://www.github.com/bowen227" target="_blank">
+                            <i class="fab fa-github-square"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/brent-owen-b5b46531" target="_blank">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                        <a href="https://www.facebook.com/Brent.e.owen" target="_blank">
+                           <i class="fab fa-facebook-square"></i>
+                        </a>
+                        <a href="https://www.twitter.com/brenteowen1" target="_blank">
+                            <i class="fab fa-twitter-square"></i>
+                        </a>
+                    </div>
                     <button class="btn btn-outline-light" routerLink="/contact">Let's Make Something</button>
                 </div>
                 <div class="col-md-6 d-flex align-items-center justify-content-center">
