--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,11 +5,14 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
         <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" routerLink="/" data-toggle="collapse" data-target="#navbarNavDropdown">Home <span class="sr-only">(current)</span></a>
+            <li class="nav-item active" routerLink="/" data-toggle="collapse" data-target="#navbarNavDropdown">
+                <a class="nav-link">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item" routerLink="/covid" data-toggle="collapse" data-target="#navbarNavDropdown">
                 <a class="nav-link">Covid-19</a>
+            </li>
+            <li class="nav-item" routerLink="/contact" data-toggle="collapse" data-target="#navbarNavDropdown">
+                <a class="nav-link">Contact</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" (click)="openFile()" data-toggle="collapse" data-target="#navbarNavDropdown">Resume</a>
@@ -31,7 +34,7 @@
             </li>
         </ul>
     </div>
-  </nav>
+</nav>
 
 <!-- <section class="nav-bar p-2">
     <section class="navbar-container container d-flex flex-row">
