Added alt to all images

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -140,7 +140,7 @@
         <div class="row justify-content-center">
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/profileSite-1.png" alt="" class="card-img-top">
+                    <img src="../../assets/profileSite-1.png" alt="brentowen.net screenshot" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -157,7 +157,7 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/api-1.jpg" alt="" class="card-img-top">
+                    <img src="../../assets/api-1.jpg" alt="Web api screenshot" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -175,7 +175,7 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/ppi-1.jpg" alt="" class="card-img-top">
+                    <img src="../../assets/ppi-1.jpg" alt="Player Power Index screenshot" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -192,7 +192,7 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/blog-1.jpg" alt="" class="card-img-top">
+                    <img src="../../assets/blog-1.jpg" alt="Blog screenshot" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -210,7 +210,7 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/covid-1.jpg" alt="" class="card-img-top">
+                    <img src="../../assets/covid-1.jpg" alt="Covid dashboard screen shot" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -228,7 +228,7 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/js-apps.jpg" alt="" class="card-img-top">
+                    <img src="../../assets/js-apps.jpg" alt="Javascript apps screenshot" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -245,7 +245,7 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/deco-2.jpg" alt="" class="card-img-top">
+                    <img src="../../assets/deco-2.jpg" alt="Deco project screenshot" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -259,7 +259,7 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/deco-1.jpg" alt="" class="card-img-top">
+                    <img src="../../assets/deco-1.jpg" alt="Deco project screenshot" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -273,7 +273,7 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/holden-1.jpg" alt="" class="card-img-top">
+                    <img src="../../assets/holden-1.jpg" alt="Holden project screenshot" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -287,7 +287,7 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/holden-2.jpg" alt="" class="card-img-top">
+                    <img src="../../assets/holden-2.jpg" alt="Holden project screenshot" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -301,7 +301,7 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/how-it-works-1.jpg" alt="" class="card-img-top">
+                    <img src="../../assets/how-it-works-1.jpg" alt="Deco project screenshot" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -315,7 +315,7 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/porrada-1.jpg" alt="" class="card-img-top">
+                    <img src="../../assets/porrada-1.jpg" alt="Porrada project screenshot" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -329,7 +329,7 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/nucamp-1.jpg" alt="" class="card-img-top">
+                    <img src="../../assets/nucamp-1.jpg" alt="Nucamp website screenshot" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
